--- a/Assignment2/Assignment2.html
+++ b/Assignment2/Assignment2.html
@@ -8,7 +8,7 @@
 
 <body style="font-family:calibri; background-color:#cef5f1;">
   <div style="width:980px; margin-left:auto; margin-right:auto;">
-    <img src="images/areas.jpeg" alt="Protected Areas Logo" height="300" width="980">
+    <img src="Images/Areas.jpeg" alt="Protected Areas Logo" height="300" width="980">
 
     <div style="text-align: center;">
       <h3 style="color: white; font-family:Verdana; background: green;" id="top">Protected Areas</h3>
@@ -44,7 +44,7 @@
     <div style="text-align:center">
       <a href="https://earth.org/protected-areas-the-past-present-and-future-of-conservation" target="_blank"
         title="Click to know more about protected areas in the world">
-        <img src="images/Map.png" alt="World map of protected areas" width="800" height="450">
+        <img src="Images/Map.png" alt="World map of protected areas" width="800" height="450">
       </a>
     </div>
     <p><a href="#top">Back to Top</a></p>
@@ -459,7 +459,7 @@
     <div style="text-align: center;">
       <a href="https://www.iucn.org/news/forests/201702/cameroon-restore-12-million-hectares-forest-species-rich-congo-basin"
         target="_blank" title="Click to know more about Cameroon and its challenges">
-        <img src="images/cameroon.png" width="700" height="450" alt="Image of Cameroon">
+        <img src="Images/Cameroon.png" width="700" height="450" alt="Image of Cameroon">
       </a>
     </div>
     <h4 style="color:green">Funding Limitations</h4>
@@ -510,13 +510,13 @@
     </p>
     <a href="https://wwf.ca/habitat/oceans/marine-protected-areas" target="_blank"
       title="Click to know more about marine protected areas">
-      <img src="images/Ocean.jpeg" alt="Image of ocean" width="700" height="400">
+      <img src="Images/Ocean.jpeg" alt="Image of ocean" width="700" height="400">
     </a>
     <br>
     <hr style="border-style:solid; border-color: green; border-width:2px;">
     <a href="https://www.canada.ca/en/services/environment/conservation/protected-areas.html" target="_blank"
       title="Click to know more about Canada's view on protected areas">
-      <img src="images/Leaf.jpeg" alt="Image of maple leaf" width="180" height="225" style="float:inline-end">
+      <img src="Images/Leaf.jpeg" alt="Image of maple leaf" width="180" height="225" style="float:inline-end">
     </a>
     <h3 style="color:green" id="canada's-action">Canada's Action</h3>
     <p>
